--- a/_includes/resumer_02-profetional.html
+++ b/_includes/resumer_02-profetional.html
@@ -2,12 +2,12 @@
     <div class="row">
         <div class="clear-mrg">
             
-            <h2 class="title-thin text-muted">职业技能</h2>
+            <h2 class="title-thin text-muted">PROJECT DEVELOPMENT</h2>
 
-            <div class="col-sm-6 clear-mrg">
+            <div class="dl-horizontal clear-mrg">
 
                 <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
-                    <strong class="progress-title">PHP</strong>
+                    <strong class="progress-title">At the first stage, we just wanted to apply the gesture and proximity to real life. Put another way, maybe a parking alarm will be a good choice. However, a single parking alarm might be a little simple and I want to learn more functions about this QT PY 2040 board. Thus, I tried to apply PWM part of the board to our project. Outputting different voltages through adjusting the frequencies is seemed to be an interesting part for me. Therefore, I studied and reached the output of different voltages and frequencies. At the middle check stage, the project could be used to play different frequencies and volumes through the speaker. Then, in order to apply the PWM part more, I found the MPR121 sensor. Different from APDS9960, which we used to detect proximity, light, and gesture, the MPR121 could be used to detect touching. So, it’s not hard to come up with an electronic piano with touching, volume, frequency, and speaker. At last, this project was made.</strong>
                     <span class="progress-bar">
                         <span class="bullet fill"></span>
                         <span class="bullet fill"></span>
@@ -22,121 +22,7 @@
                     </span>
                 </div>
 
-                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
-                    <strong class="progress-title">HTML</strong>
-                    <span class="progress-bar">
-                        <span class="bullet fill"></span>
-                        <span class="bullet fill"></span>
-                        <span class="bullet fill"></span>
-                        <span class="bullet fill"></span>
-                        <span class="bullet fill"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                    </span>
-                </div>
-
-                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
-                    <strong class="progress-title">CSS</strong>
-                    <span class="progress-bar">
-                        <span class="bullet fill"></span>
-                        <span class="bullet fill"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                    </span>
-                </div>
-
-                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
-                    <strong class="progress-title">Javascript</strong>
-                    <span class="progress-bar">
-                        <span class="bullet fill"></span>
-                        <span class="bullet fill"></span>
-                        <span class="bullet fill"></span>
-                        <span class="bullet fill"></span>
-                        <span class="bullet fill"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                    </span>
-                </div>
-
-            </div>
-            
-            <div class="col-sm-6 clear-mrg">
-
-                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
-                    <strong class="progress-title">PhotoShop</strong>
-                    <span class="progress-bar">
-                        <span class="bullet fill"></span>
-                        <span class="bullet fill"></span>
-                        <span class="bullet fill"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                    </span>
-                </div>
-
-                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
-                    <strong class="progress-title">MySQL</strong>
-                    <span class="progress-bar">
-                        <span class="bullet fill"></span>
-                        <span class="bullet fill"></span>
-                        <span class="bullet fill"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                    </span>
-                </div>
-
-                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
-                    <strong class="progress-title">Java</strong>
-                    <span class="progress-bar">
-                        <span class="bullet fill"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                    </span>
-                </div>
-
-                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
-                    <strong class="progress-title">CSS</strong>
-                    <span class="progress-bar">
-                        <span class="bullet fill"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                        <span class="bullet"></span>
-                    </span>
-                </div>
+               
 
             </div>
 
