--- a/_includes/resumer_03-education.html
+++ b/_includes/resumer_03-education.html
@@ -1,7 +1,7 @@
 <section class="section brd-btm" id="education">
     <div class="row">
         <div class="col-sm-12 clear-mrg">
-            <h2 class="title-thin text-muted">Significant issues</h2>
+            <h2 class="title-thin text-muted">SIGNIFICANT ISSUES</h2>
 
             <div class="ref-box hreview">
                 <div class="ref-avatar">
