--- a/_includes/resumer_03-education.html
+++ b/_includes/resumer_03-education.html
@@ -1,7 +1,7 @@
 <section class="section brd-btm" id="education">
     <div class="row">
         <div class="col-sm-12 clear-mrg">
-            <h2 class="title-thin text-muted">SIGNIFICANT ISSUES</h2>
+            <h2 class="title-thin text-muted">SIGNIFICANT ISSUES AND SOMETHING SATISFYING</h2>
 
             <div class="ref-box hreview">
                 <div class="ref-avatar">
@@ -12,6 +12,7 @@
                     <div class="ref-author">
                      
                         <span>First, enabling APDS9960 and MPR121 with one I2C port. At first, I did not clearly figure out the relationship between these two sensors. However, after consulting Prof. Banks, I had more profound thought about this. These two sensors have different address, thus using the same clock and being initialized at the same time are allowed. Broadly speaking, we can connect more sensors with different address in series with one I2C. Second, the achievement of cord is also a very tricky issue. As I thought before, the clock will be occupied when certain key was held, thus another playing will be not allowed because the judgments could not happen together. Nevertheless, holding two or more keys to produce the cord is allowed, which was not imaged by myself. After serious consideration, I think that it should be the function of the PWM output. That is to say, it is not achieved due to any other libraries or codes. Third, the application of the MPR121 is a great construction for me because I learned more types of the sensors. In the future, I would like to try to use more other types of sensors.</span>
+                        <span>The color-tone shining LED is really a good-looking design, which makes me feel very comfortable when playing the piano, albeit it is very simple. The achievement of cord is very tricky and intelligent but I still have not enough evidences to speculate its reason. Finally, the initialization of these two sensors made me learn much.</span>
                     </div>
                 </div>
             </div><!-- .ref-box -->
