--- a/_includes/resumer_04-experience.html
+++ b/_includes/resumer_04-experience.html
@@ -1,41 +1,23 @@
 <section class="section brd-btm" id="experience">
     <div class="row">
         <div class="col-sm-12 clear-mrg">
-            <h2 class="title-thin text-muted">工作经历</h2>
+            <h2 class="title-thin text-muted">REFLECTIONS</h2>
             <br />
             <div class="education">
                 <div class="education-box">
                     <time class="education-date" datetime="2016-01TNow">
-                        <span>Apr. <strong class="text-upper">2015</strong> - Feb. <strong>2016</strong></span>
+                        
                     </time>
-                    <h3>Yuan Gong</h3>
-                    <span class="education-company">东莞市仕博电子有限公司 | 员工</span>
-                    <p>流水线 实习</p>
-                    <p>。。。</p>
+                   
+                    <span class="education-company">This project is a very typical design and application of PWM part. If someone wants to have a deep understanding about this part, I strongly recommend to learn about this project. With the outputting of different frequencies, we can achieve much more than this simple piano. For example, in some certain controlling circuits which require different voltages, we can easily output the required voltages without using of some other circuits. What’s more, the fast switching of the outputting voltage can also be simply achieved, which dominates the physical circuits. About the selection of the components, the MPR121 is really a preferrable choice because its sensitivity and durability are very excellent. In the future, I would like to add a microphone to this project, which can be used to input our own voice and change its volume and frequency. Also, I hope some teams can try to achieve this imagination later. Last but not the least, a screen which can show the tones should be considered, about the selection, I strongly recommend the I2C 1602 LCD screen because it is very basic and compatible for our new designer as I learn.</span>
+                    
+                    
                 </div>
                 <!-- .education-box -->
 
                 <div class="education-box">
                     <time class="education-date" datetime="2014-09T2016-01">
-                        <span>Apr. <strong class="text-upper">2018</strong> - Jul. <strong>2018</strong></span>
-                    </time>
-                    <h3>Club</h3>
-                    <span class="education-company">东莞市厚街国际大酒店 | 酒吧员</span>
-                    <p>西餐部酒吧员</p>
-                    <p>负责公司自助餐出品</p>
-                    <p>带新人学习</p>
-                    <p>。。。</p>
-                </div>
-                <div class="education-box">
-                    <time class="education-date" datetime="2014-09T2016-01">
-                        <span>Aug. <strong class="text-upper">2017</strong> - <strong>Now</strong></span>
-                    </time>
-                    <h3>Web UI</h3>
-                    <span class="education-company">自学 | 网站建设以及网站编辑</span>
-                    <p>使用Wordpress,Typecho,Hexo搭建博客</p>
-                    <p>熟识Github等Git网站</p>
-                    <p>会Linux基础网站建设以及LNMP搭建</p>
-                    <p>。。。</p>
+                       
                 </div>
             </div>
         </div>
