--- a/_includes/resumer_05-certification.html
+++ b/_includes/resumer_05-certification.html
@@ -8,7 +8,7 @@
                     <img src="{{ '/styles/img/NCRE.JPG' | prepend: site.baseurl }}" alt="">
                 </figure>
 
-                <h3 class="award-title">When any key is held, the sensor will detect that and order to enable PWM’s output. PWM output the corresponding voltage through changing the duty cycle. The output voltage equals the virtual value of the sine voltage signal. Therefore, we can output different voltages through different duty cycles. On the other hand, the data of our project is all alive data, which means it does not rely on the external input. Put another way, there is no saving function in this project, which relies on the input of PIO. Of course, if we want to add a microphone to this piano, we need to use the input and saving of the PIO. This will be done in the future.
+                <h3 class="col-sm-6 clear-mrg>When any key is held, the sensor will detect that and order to enable PWM’s output. PWM output the corresponding voltage through changing the duty cycle. The output voltage equals the virtual value of the sine voltage signal. Therefore, we can output different voltages through different duty cycles. On the other hand, the data of our project is all alive data, which means it does not rely on the external input. Put another way, there is no saving function in this project, which relies on the input of PIO. Of course, if we want to add a microphone to this piano, we need to use the input and saving of the PIO. This will be done in the future.
 
 </h3>
             </div>
