--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{{ site.name }} 的简历</title>
+    <title>{{ site.name }} Writeup</title>
 
     <!-- Icon Fonts -->
     <link href="{{ '/styles/fonts/icomoon/style.css' | prepend: site.baseurl }}" rel="stylesheet">
