--- a/_includes/resumer_06-personal_project.html
+++ b/_includes/resumer_06-personal_project.html
@@ -4,9 +4,11 @@
                             <dl class="dl-horizontal">
                                 <dt>Team member:</dt>
                                 <p>Kezhen Yan</p>
-                                <p>Haoliang You</p>
+                                <p>Contribution: </p>
                                 <dd><a href="https://github.com/akiyamask">Github of Kezhen Yan</a></dd>
-                                <dd><a href="https://github.com/akiyamask">Github of Haoliang You</a></dd>
+                                <p>Haoliang You</p>
+                                <p>Contribution: </p>
+                                <dd><a href="https://github.com/HaoliangYou">Github of Haoliang You</a></dd>
                             </dl>
                             
                             </div>
