--- a/_includes/resumer_03-education.html
+++ b/_includes/resumer_03-education.html
@@ -5,7 +5,7 @@
 
             <div class="ref-box hreview">
                 <div class="ref-avatar">
-                    <img alt="" src="{{ '/styles/img/school.jpg' | prepend: site.baseurl }}" class="avatar avatar-54 photo" height="54" width="54">
+                    <img alt="" src="{{ 'https://github.com/Akiyamask-Kezhen-Yan/TEAM-DINGZHEN/blob/main/styles/img/personal.png' | prepend: site.baseurl }}" class="avatar avatar-54 photo" height="54" width="54">
                 </div>
 
                 <div class="ref-info">
