--- a/_includes/resumer_05-certification.html
+++ b/_includes/resumer_05-certification.html
@@ -1,6 +1,6 @@
 <section class="section brd-btm" id="certification">
     <h2 class="title-thin text-muted">PIO EXPLANATION</h2>
-    <img src="PIO.png" alt="PIO PORT DIAGRAM" width="450" height="300">
+    <img src="BANNERS.png" alt="PIO PORT DIAGRAM" width="450" height="300">
 
     <div class="row">
         <div class="col-sm-6 clear-mrg">
