--- a/_includes/resumer_06-personal_project.html
+++ b/_includes/resumer_06-personal_project.html
@@ -4,11 +4,13 @@
                             <dl class="dl-horizontal">
                                 <dt>Team member:</dt>
                                 <p>Kezhen Yan</p>
-                                <p>Contribution: </p>
+                                <p>Contribution: designing project, purposal writing, code debugging, compoents selection, writeup </p>
                                 <dd><a href="https://github.com/akiyamask">Github of Kezhen Yan</a></dd>
                                 <p>Haoliang You</p>
-                                <p>Contribution: </p>
+                                <p>Contribution: designing project, purposal writing, welding, compoents selection, writeup</p>
                                 <dd><a href="https://github.com/HaoliangYou">Github of Haoliang You</a></dd>
+                                <p>More details in video about our project in Youtube:</p>
+                                <dd><a href="https://youtu.be/ZF-MIWmQGCo">Video link</a></dd>
                             </dl>
                             
                             </div>
