--- a/_includes/resumer_06-personal_project.html
+++ b/_includes/resumer_06-personal_project.html
@@ -11,6 +11,8 @@
                                 <dd><a href="https://github.com/HaoliangYou">Github of Haoliang You</a></dd>
                                 <p>More details in video about our project in Youtube:</p>
                                 <dd><a href="https://youtu.be/ZF-MIWmQGCo">Video link</a></dd>
+                                <p>The code has been uploaded on github, you can check it here:</p>
+                                <dd><a href="https://youtu.be/ZF-MIWmQGCo">Code link</a></dd>
                             </dl>
                             
                             </div>
